<resources>
    <string name="app_name">Faircorp</string>
    <string name="app_logo_description">Faircorp logo</string>
    <string name="act_main_windowname_hint">Enter window id </string>
    <string name="act_main_welcome">Welcome on faircorp,\n the app to manage building windows</string>
    <string name="content_description">image titre</string>
    <string name="button">Search</string>
    <string name="textview">TextView</string>
    <string name="open_window">Open window</string>
    <string name="window_name">Window name</string>
    <string name="textview_building">Building Windows</string>


    <string name="menu_windows">Building Windows</string>
    <string name="menu_website">Our website</string>
    <string name="menu_email">Send us an email</string>
    <string name="title_activity_parent">ParentActivity</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="room_name">Room Name</string>
    <string name="temperacture">Temperature</string>
    <string name="building_rooms">Building Rooms</string>

    <string name="act_window_name">Window name</string>
    <string name="act_window_room">Room</string>
    <string name="act_window_room_target_temp">Target room temperature</string>
    <string name="act_window_room_current_temp">Current room temperature</string>
    <string name="act_window_status">Status</string>
    <string name="window_name_fix_texte">Window name</string>
    <string name="room_name_texte">Room</string>
    <string name="current_room_temperature_texte">Current room temperature</string>
    <string name="target_room_temperature_texte">Target room temperature</string>
    <string name="status_texte">Status</string>
    <string name="humidity">humidity</string>
    <string name="meteo">meteo</string>
    <string name="icon">meteoIcon</string>
    <string name="main">meteoMain</string>

</resources>